--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 asgiref==3.6.0
+attrs==22.2.0
+autopep8==2.0.1
 beautifulsoup4==4.11.2
 Django==4.1.6
+exceptiongroup==1.1.0
+iniconfig==2.0.0
+mypy==1.0.0
+mypy-extensions==1.0.0
+packaging==23.0
 Pillow==9.4.0
+pluggy==1.0.0
+pycodestyle==2.10.0
+pytest==7.2.1
+pytest-django==4.5.2
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+tomli==2.0.1
+typing_extensions==4.5.0
